Fix: Image sizing on mobile

--- a/styles.css
+++ b/styles.css
@@ -86,3 +86,17 @@ button {
 .hidden {
     display: none;
 }
+
+img {
+    width: 100%;
+    height: 100%;
+    max-width: 800px;
+    max-height: 600px;
+}
+
+#boo {
+    width: 100%;
+    height: 100%;
+    max-width: 800px;
+    max-height: 600px;
+}
